--- a/coverage.html
+++ b/coverage.html
@@ -157,7 +157,7 @@
             <td>PartialGraficosComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/14)</span>
+                <span class="coverage-count">(0/18)</span>
             </td>
         </tr>
         <tr class="low">
@@ -169,7 +169,7 @@
             <td>PartialListasComponent</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+                <span class="coverage-count">(0/7)</span>
             </td>
         </tr>
         <tr class="low">
@@ -199,6 +199,66 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./classes/CompraSemLicitacao.html">src/app/models/compraSemLicitacao.ts</a>
+            </td>
+            <td>class</td>
+            <td>CompraSemLicitacao</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/11)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#maiores_gastos">src/app/services/maioresGastosData.ts</a>
+            </td>
+            <td>variable</td>
+            <td>maiores_gastos</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/MaioresGastosService.html">src/app/services/maioresGastosService.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>MaioresGastosService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#mediana_gastos_predicao">src/app/services/medianaGastosPredicaoData.ts</a>
+            </td>
+            <td>variable</td>
+            <td>mediana_gastos_predicao</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/MedianaGastosPredicaoService.html">src/app/services/medianaGastosPredicaoService.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>MedianaGastosPredicaoService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#month_median">src/app/services/monthMedianData.ts</a>
             </td>
             <td>variable</td>
@@ -215,6 +275,30 @@
             </td>
             <td>injectable</td>
             <td>MonthMedianService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#soma_gastos_predicao">src/app/services/somaGastosPredicaoData.ts</a>
+            </td>
+            <td>variable</td>
+            <td>soma_gastos_predicao</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/SomatorioGastosPredicaoService.html">src/app/services/somaGastosPredicaoService.ts</a>
+            </td>
+            <td>class</td>
+            <td>SomatorioGastosPredicaoService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/3)</span>
