--- a/overview.html
+++ b/overview.html
@@ -197,7 +197,7 @@
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title"><span class="icon ion-md-arrow-round-down"></span></h4>
-                    <p class="card-text">3 Injectables</p>
+                    <p class="card-text">5 Injectables</p>
                 </div>
             </div>
         </div>
@@ -205,7 +205,7 @@
             <div class="card text-center">
                 <div class="card-block">
                     <h4 class="card-title"><span class="icon ion-ios-paper"></span></h4>
-                    <p class="card-text">1 Class</p>
+                    <p class="card-text">3 Classes</p>
                 </div>
             </div>
         </div>
